sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:16: error: ';' expected but 'if' found.
    }if(cpt==0){
     ^